--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,13 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+optimizer = true
+optimizer_runs = 200
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[rpc_endpoints]
+base_sepolia = "https://sepolia.base.org/"
+base = "https://mainnet.base.org/"
+sepolia = "https://rpc.sepolia.org/"
+holesky = "https://1rpc.io/holesky"
